fix button spacing

--- a/src/components/organisms/PricingView/PricingView.css
+++ b/src/components/organisms/PricingView/PricingView.css
@@ -12,7 +12,8 @@
 
 @media only screen and (max-width: 510px) {
  .actionButtonContainer {
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
  }
 }
 
